resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: debugapp
spec:
  finalizers:
  - kubernetes
