resources/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: phpapp
    app.kubernetes.io/component: debugocp
    app.kubernetes.io/instance: debugocp
  name: phpapp
  namespace: phpapp
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: debugocp
    weight: 100
  wildcardPolicy: None
